tests/rosetta/out/Smalltalk/amb.out
/workspace/mochi/tests/rosetta/out/Smalltalk/amb.st:24: parse error, expected '|' or identifier
